apps/handbrake/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handbrake
  namespace: media
  labels:
    app: handbrake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: handbrake
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: handbrake
    spec:
      containers:
      - name: handbrake
        image: jlesage/handbrake:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5800

        volumeMounts:
        - name: handbrake-config
          mountPath: /config
        - name: media-transcode
          mountPath: /watch
        - name: media-library
          mountPath: /output
        

      hostname: handbrake
      restartPolicy: Always
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"

      volumes:
      - name: handbrake-config
        persistentVolumeClaim:
          claimName: handbrake-config
      - name: media-transcode
        persistentVolumeClaim:
          claimName: media-transcode
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
