apps/handbrake/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: handbrake
  namespace: media
spec:
  selector:
    app: handbrake
  ports:
  - name: handbrake
    targetPort: 5800
    port: 80
