apps/handbrake/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: handbrake
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`handbrake.lab.emc2.build`)
      kind: Rule
      services:
        - name: handbrake
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  #tls: 
    # Apr 14 2025: No longer needed! Traefik serves this as the default cert
    #secretName: lab-emc2-build-tls
